--- a/app/src/main/res/layout/activity_area_price_set.xml
+++ b/app/src/main/res/layout/activity_area_price_set.xml
@@ -97,8 +97,8 @@
                 android:text="@string/str_area_price_save"
                 android:textSize="16sp"
                 android:layout_marginBottom="10dp"
-                android:textColor="@color/color_view_text"
-                android:background="@drawable/btn_login_new"
+                android:textColor="@color/white"
+                android:background="@drawable/bg_btn_bind_lock"
                 android:layout_gravity="center"/>
 
         </LinearLayout>
