--- a/app/src/main/res/layout/activity_receiving_order_show.xml
+++ b/app/src/main/res/layout/activity_receiving_order_show.xml
@@ -449,33 +449,34 @@
 
                 </LinearLayout>
 
-                <!--<LinearLayout-->
-                    <!--android:layout_width="match_parent"-->
-                    <!--android:layout_height="wrap_content"-->
-                    <!--android:layout_marginTop="5dp"-->
-                    <!--android:orientation="horizontal">-->
+                <LinearLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_marginTop="5dp"
+                    android:orientation="horizontal">
 
-                    <!--<TextView-->
-                        <!--android:layout_width="wrap_content"-->
-                        <!--android:layout_height="wrap_content"-->
-                        <!--android:text="描述："-->
-                        <!--android:textColor="@color/black"-->
-                        <!--android:textSize="16sp" />-->
+                    <TextView
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:text="是否到付："
+                        android:textColor="@color/black"
+                        android:textSize="16sp" />
 
-                    <!--<TextView-->
-                        <!--android:id="@+id/tv_receive_order_show_show_desc"-->
-                        <!--android:layout_width="match_parent"-->
-                        <!--android:layout_height="wrap_content"-->
-                        <!--android:textColor="@color/black"-->
-                        <!--android:textSize="16sp" />-->
+                    <TextView
+                        android:id="@+id/tv_receiving_order_show_is_arrive_pay"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:text="元"
+                        android:textColor="@color/black"
+                        android:textSize="16sp" />
 
-                <!--</LinearLayout>-->
+                </LinearLayout>
 
                 <LinearLayout
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:orientation="horizontal"
-                    android:layout_marginTop="5dp">
+                    android:layout_marginTop="5dp"
+                    android:orientation="horizontal">
 
                     <TextView
                         android:layout_width="wrap_content"
@@ -492,6 +493,28 @@
                         android:textSize="16sp" />
 
                 </LinearLayout>
+
+                <!--<LinearLayout-->
+                    <!--android:layout_width="match_parent"-->
+                    <!--android:layout_height="wrap_content"-->
+                    <!--android:layout_marginTop="5dp"-->
+                    <!--android:orientation="horizontal">-->
+
+                    <!--<TextView-->
+                        <!--android:layout_width="wrap_content"-->
+                        <!--android:layout_height="wrap_content"-->
+                        <!--android:text="备注："-->
+                        <!--android:textColor="@color/black"-->
+                        <!--android:textSize="16sp" />-->
+
+                    <!--<TextView-->
+                        <!--android:id="@+id/tv_receiving_order_show_remark"-->
+                        <!--android:layout_width="wrap_content"-->
+                        <!--android:layout_height="wrap_content"-->
+                        <!--android:textColor="@color/black"-->
+                        <!--android:textSize="16sp" />-->
+
+                <!--</LinearLayout>-->
 
             </LinearLayout>
 
@@ -510,11 +533,11 @@
                     android:id="@+id/tv_receive_order_show_express_money"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
+                    android:layout_margin="10dp"
                     android:text="快递费用"
                     android:textColor="@color/black"
                     android:textSize="18sp"
-                    android:textStyle="bold"
-                    android:layout_margin="10dp"/>
+                    android:textStyle="bold" />
 
                 <View
                     android:layout_width="match_parent"
@@ -565,13 +588,13 @@
                         android:id="@+id/et_receive_order_express_money"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
+                        android:background="@color/color_bg"
+                        android:hint="快递费"
                         android:inputType="number"
                         android:padding="8dp"
-                        android:background="@color/color_bg"
                         android:text="0.0"
                         android:textColor="@color/black"
-                        android:textSize="16sp"
-                        android:hint="快递费"/>
+                        android:textSize="16sp" />
 
                     <TextView
                         android:id="@+id/tv_receive_order_show_show_money"
@@ -594,12 +617,12 @@
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:background="@color/color_bg"
+                        android:hint="保价费"
                         android:inputType="number"
                         android:padding="8dp"
                         android:text="0.0"
                         android:textColor="@color/black"
-                        android:textSize="16sp"
-                        android:hint="保价费"/>
+                        android:textSize="16sp" />
 
                     <TextView
                         android:id="@+id/tv_receive_order_show_show_support_money"
@@ -656,10 +679,10 @@
                     android:layout_height="wrap_content"
                     android:layout_marginRight="10dp"
                     android:background="@color/color_bg"
+                    android:hint="输入备注"
                     android:padding="8dp"
                     android:textColor="@color/black"
-                    android:textSize="16sp"
-                    android:hint="输入备注"/>
+                    android:textSize="16sp" />
 
             </LinearLayout>
 
@@ -675,11 +698,11 @@
                     android:id="@+id/btn_receive_order_show_show_pay"
                     android:layout_width="100dp"
                     android:layout_height="36dp"
+                    android:layout_marginBottom="10dp"
+                    android:background="@drawable/bg_btn_bind_lock"
                     android:text="确定"
-                    android:textColor="@color/color_view_text"
-                    android:textSize="16sp"
-                    android:background="@drawable/btn_login_new"
-                    android:layout_marginBottom="10dp"/>
+                    android:textColor="@color/white"
+                    android:textSize="16sp" />
 
             </LinearLayout>
 
