--- a/app/src/main/res/layout/fragment_setting.xml
+++ b/app/src/main/res/layout/fragment_setting.xml
@@ -197,12 +197,12 @@
         android:layout_marginLeft="20dp"
         android:layout_marginRight="20dp"
         android:layout_marginTop="40dp"
-        android:background="#FF0000"
+        android:background="@drawable/bg_btn_bind_lock"
         android:gravity="center"
         android:paddingBottom="6dp"
         android:paddingTop="6dp"
         android:text="退出登录"
-        android:textColor="#FFFFFF"
+        android:textColor="@color/white"
         android:textSize="@dimen/font_content_size_4"/>
 
 
