--- a/app/src/main/res/layout/layout_weight_choose.xml
+++ b/app/src/main/res/layout/layout_weight_choose.xml
@@ -1,23 +1,25 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:orientation="horizontal" android:layout_width="wrap_content"
-    android:layout_height="wrap_content">
+    android:layout_height="wrap_content"
+    android:background="@color/color_bg">
 
     <Button
         android:id="@+id/btn_weight_choose_minus"
         android:layout_width="20dp"
-        android:layout_height="match_parent"
-        android:layout_marginTop="5dp"
-        android:layout_marginBottom="5dp"
+        android:layout_height="50dp"
         android:text="-"
         android:textSize="16sp"
-        android:textColor="@color/black"
-        android:background="@drawable/btn_login_new"/>
+        android:textColor="@color/white"
+        android:background="#F58400"/>
 
     <EditText
         android:id="@+id/et_weight_choose"
         android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_height="50dp"
+        android:background="@drawable/bg_edittext"
+        android:paddingLeft="10dp"
+        android:paddingRight="10dp"
         android:text="1.0"
         android:textSize="16sp"
         android:textColor="@color/black"
@@ -26,12 +28,10 @@
     <Button
         android:id="@+id/btn_weight_choose_plus"
         android:layout_width="20dp"
-        android:layout_height="match_parent"
-        android:layout_marginTop="5dp"
-        android:layout_marginBottom="5dp"
+        android:layout_height="50dp"
         android:text="+"
         android:textSize="16sp"
-        android:textColor="@color/black"
-        android:background="@drawable/btn_login_new"/>
+        android:textColor="@color/white"
+        android:background="#F58400"/>
 
 </LinearLayout>
