--- a/app/src/main/res/layout/activity_info_setting.xml
+++ b/app/src/main/res/layout/activity_info_setting.xml
@@ -96,7 +96,7 @@
         android:layout_width="100dp"
         android:layout_height="36dp"
         android:layout_below="@id/ll_info_setting_area"
-        android:layout_marginLeft="10dp"
+        android:layout_centerHorizontal="true"
         android:background="@drawable/bg_btn_bind_lock"
         android:text="保存"
         android:textColor="@color/white"
