--- a/app/src/main/res/layout/activity_receiving_order_show.xml
+++ b/app/src/main/res/layout/activity_receiving_order_show.xml
@@ -84,8 +84,8 @@
                 <LinearLayout
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:orientation="horizontal"
-                    android:layout_marginTop="5dp">
+                    android:layout_marginTop="5dp"
+                    android:orientation="horizontal">
 
                     <TextView
                         android:layout_width="wrap_content"
@@ -449,8 +449,8 @@
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:orientation="vertical"
-                android:layout_marginLeft="10dp">
+                android:layout_marginLeft="10dp"
+                android:orientation="vertical">
 
                 <LinearLayout
                     android:layout_width="match_parent"
@@ -550,8 +550,8 @@
                 android:id="@+id/ll_receive_order_show_show_money"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:orientation="vertical"
-                android:layout_marginTop="10dp">
+                android:layout_marginTop="10dp"
+                android:orientation="vertical">
 
                 <View
                     android:layout_width="match_parent"
@@ -633,33 +633,41 @@
                         android:textColor="@color/black"
                         android:textSize="16sp" />
 
-                    <TextView
+                    <LinearLayout
+                        android:id="@+id/ll_receive_order_show_support_money"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        android:layout_marginLeft="10dp"
-                        android:text="保价费："
-                        android:textColor="@color/black"
-                        android:textSize="16sp" />
+                        android:orientation="horizontal">
 
-                    <EditText
-                        android:id="@+id/et_receive_order_express_support_money"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:background="@color/color_bg"
-                        android:hint="保价费"
-                        android:inputType="number"
-                        android:padding="8dp"
-                        android:text="0.0"
-                        android:textColor="@color/black"
-                        android:textSize="16sp" />
+                        <TextView
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:layout_marginLeft="10dp"
+                            android:text="保价费："
+                            android:textColor="@color/black"
+                            android:textSize="16sp" />
 
-                    <TextView
-                        android:id="@+id/tv_receive_order_show_show_support_money"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:text="元"
-                        android:textColor="@color/black"
-                        android:textSize="16sp" />
+                        <EditText
+                            android:id="@+id/et_receive_order_express_support_money"
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:background="@color/color_bg"
+                            android:hint="保价费"
+                            android:inputType="number"
+                            android:padding="8dp"
+                            android:text="0.0"
+                            android:textColor="@color/black"
+                            android:textSize="16sp" />
+
+                        <TextView
+                            android:id="@+id/tv_receive_order_show_show_support_money"
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:text="元"
+                            android:textColor="@color/black"
+                            android:textSize="16sp" />
+
+                    </LinearLayout>
 
                 </LinearLayout>
 
