--- a/app/src/main/res/layout/layout_receiving_order_item.xml
+++ b/app/src/main/res/layout/layout_receiving_order_item.xml
@@ -34,6 +34,7 @@
                 android:layout_alignParentRight="true"
                 android:layout_marginRight="10dp"
                 android:textSize="14sp"
+                android:visibility="gone"
                 android:textColor="@color/color_red"/>
 
     </RelativeLayout>
