--- a/app/src/main/res/layout/layout_type_choose_item.xml
+++ b/app/src/main/res/layout/layout_type_choose_item.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="wrap_content"
     android:layout_height="wrap_content"
     android:orientation="vertical"
@@ -12,14 +12,16 @@
         android:padding="10dp"
         android:text="全部"
         android:textColor="@color/color_red"
-        android:textSize="14sp" />
+        android:textSize="14sp"
+        android:layout_centerHorizontal="true"/>
 
     <View
         android:id="@+id/v_type_choose_title_line"
+        android:layout_below="@id/tv_type_choose_title"
         android:layout_width="match_parent"
         android:layout_height="2dp"
-        android:layout_alignParentBottom="true"
-        android:background="@color/color_red" />
+        android:background="@color/color_red"
+        android:layout_centerHorizontal="true"/>
 
-</LinearLayout>
+</RelativeLayout>
 
